Refactor project for new name and relative paths
Renamed project from 'eco-sentinel' to 'sistema-dengue-clima' across configuration, documentation, and code. Updated all hardcoded absolute paths to use relative paths with pathlib for portability. Removed the dashboard module, added a new GPU-accelerated data processing job with RAPIDS/cuDF, and introduced a utility script for automated path updates. Improved documentation and code comments to reflect the new project structure and naming.

--- a/notebooks/analise_estrategica_dengue.ipynb
+++ b/notebooks/analise_estrategica_dengue.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "\n",
     "# Análise Estratégica: Dengue e Clima no Brasil\n",
-    "**Projeto Eco-Sentinel**\n",
+    "**Projeto Sistema Dengue-Clima**\n",
     "\n",
     "Este notebook realiza uma análise aprofundada da relação entre casos de Dengue e variáveis climáticas (temperatura e precipitação), utilizando a camada Gold do Data Lakehouse.\n",
     "\n",
@@ -307,7 +307,7 @@
     "\n",
     "**Próximos Passos Sugeridos:**\n",
     "*   Implementar um modelo preditivo (Random Forest ou ARIMA) usando as variáveis de lag identificadas.\n",
-    "*   Criar dashboards interativos para monitoramento em tempo real.\n"
+    "*   Criar análises interativas para monitoramento em tempo real."
    ]
   }
  ],
